cleanedup sample.env

--- a/sample.env
+++ b/sample.env
@@ -1,6 +1,4 @@
-export GITHUB_CLIENT_ID="your github client id"
-export GITHUB_CLIENT_SECRET="your github client secret"
-export USERNAME="your github username"
-export PASSWORD="your github password"
-export GITHUB_REPO="username/repo_name"
-export GOOGLE_SPREADSHEET_ID="your Google Spreadsheet ID"
+export USERNAME=your_github_username
+export PASSWORD=your_github_password
+export GITHUB_REPO=username/repo_name
+export GOOGLE_SPREADSHEET_ID=spreadsheet_id
