--- a/package.json
+++ b/package.json
@@ -19,17 +19,17 @@
     "start": "node app.js"
   },
   "dependencies": {
+    "body-parser": "^1.17.1",
     "chalk": "^1.1.1",
     "express": "^4.13.3",
     "google-spreadsheet": "^1.0.1",
     "habitat": "^3.1.2",
     "mkdirp": "^0.5.1",
     "moment": "^2.10.6",
+    "pug": "^2.0.0-beta11",
     "request": "^2.61.0",
     "tabletop": "^1.4.2",
     "underscore": "^1.8.3"
   },
-  "devDependencies": {
-
-  }
+  "devDependencies": {}
 }
